--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@
   --bck-section-white: #f5f4fa;
   /* Стили шрифтов */
   --letter: 0.03em;
+  /* --hover-portfolio: rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+} */
 }
 
 body {
@@ -503,6 +506,9 @@ img {
 
 .desc-portfolio {
   margin-left: 24px;
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .title-portfolio {
