--- a/css/styles.css
+++ b/css/styles.css
@@ -477,6 +477,10 @@ img {
   fill: var(--primary-text-color);
 }
 
+.client-flexbox {
+  /* убираю левый паддирнг */
+  padding-left: 0;
+}
 .icon-hover-link:hover .clients-icon {
   fill: var(--accent-blue-color);
 }
@@ -564,6 +568,10 @@ img {
   height: 44px;
   border-radius: 50%;
   box-sizing: border-box;
+}
+.portfolio .item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .title-icon {
   font-family: Roboto;
