--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,6 @@ img {
   display: block;
   /* тут должен оформить контент */
   content: "";
-
   background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
@@ -423,7 +422,6 @@ img {
   padding: 6px 22px;
   border: none;
   min-width: 73px;
-
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
@@ -431,7 +429,9 @@ img {
   line-height: 1.63;
   letter-spacing: var(--letter);
   color: var(--header-text-color);
-  background-color: var(--primary-bck-color);
+
+  border-radius: 4px;
+  border: 1px solid transparent;
 }
 
 .radio-btn .item:not(:first-child) {
@@ -503,12 +503,15 @@ img {
   margin-bottom: 50px;
 }
 
-.img-portfolio {
+/* .img-portfolio {
   padding-bottom: 20px;
-}
+} */
 
 .desc-portfolio {
-  margin-left: 24px;
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .title-portfolio {
