--- a/css/styles.css
+++ b/css/styles.css
@@ -546,7 +546,7 @@ img {
   color: var(--primary-text-color);
 }
 
-/* Футер */
+/* Футеррррр */
 .wrap-footer {
   background-color: var(--secondary-bck-color);
   padding-top: 60px;
